--- a/training/visit/links_and_tutorials/index.html
+++ b/training/visit/links_and_tutorials/index.html
@@ -372,7 +372,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 <li><a href="http://rammb.cira.colostate.edu/training/visit/links_and_tutorials/2019_noaa_nasa_jpss_workshop.asp">2019 NOAA-NASA Satellite Meteorology Summer Workshop: JPSS, Fort Collins, CO</a></li>
 <li><a href="http://rammb.cira.colostate.edu/training/visit/links_and_tutorials/2019_JSC_Workshop.asp">2019 Joint Satellite Conference: Significant Hazards Satellite Applications Short Course, Boston, MA</a></li>
 <li><a href="http://rammb.cira.colostate.edu/training/visit/links_and_tutorials/2020_AMS_Boston.asp">2020 AMS Annual Meeting, &#8216;From GOES-R and JPSS Satellite Data to Disaster Response: Every Decision Counts&#8217;, Boston, MA</a></li>
-<li><a href="https://rammb.cira.colostate.edu/training/visit/links_and_tutorials/2021_AMS_Satellite_Short_Course.asp">2021 AMS Annual Meeting: GOES-R / JPSS Hands-On Training To Process, Display, and Analyze Satellite Data Products</a></li>
+<li><a href="./training/visit/links_and_tutorials/2021_AMS_Satellite_Short_Course.asp">2021 AMS Annual Meeting: GOES-R / JPSS Hands-On Training To Process, Display, and Analyze Satellite Data Products</a></li>
 </ul>
 </li>
 <li>VISITview
