--- a/training/visit/quick_reference/index.html
+++ b/training/visit/quick_reference/index.html
@@ -365,7 +365,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 								</tr>
 															<tr style="border-bottom:1px solid #ccc;">
 									<td class="title">
-																		<a href="https://rammb.cira.colostate.edu/training/visit/quick_guides/CMORPH2_Quick_Guide_v1.pdf" target="_blank">CMORPH-2 Precipitation Rates										</a>
+																		<a href="./training/visit/quick_guides/CMORPH2_Quick_Guide_v1.pdf" target="_blank">CMORPH-2 Precipitation Rates										</a>
 																		</td>
 									<td>
 										September 15, 2021									</td>
@@ -391,7 +391,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 								</tr>
 															<tr style="border-bottom:1px solid #ccc;">
 									<td class="title">
-																		<a href="https://rammb.cira.colostate.edu/training/visit/quick_guides/VIIRS_M8_1_24um_Quick_Guide_v1.pdf" target="_blank">VIIRS M-8 Band (1.24 um)										</a>
+																		<a href="./training/visit/quick_guides/VIIRS_M8_1_24um_Quick_Guide_v1.pdf" target="_blank">VIIRS M-8 Band (1.24 um)										</a>
 																		</td>
 									<td>
 										June 3, 2021									</td>
@@ -1563,7 +1563,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 						</thead>
 																					<tr style="border-bottom:1px solid #ccc;">
 								<td class="title">
-									<a href="https://rammb.cira.colostate.edu/training/visit/quick_briefs/glm_fd_data_quality" target="_blank">GLM Full Disk Data Quality</a>
+									<a href="./training/visit/quick_briefs/glm_fd_data_quality" target="_blank">GLM Full Disk Data Quality</a>
 								</td>
 								<td class="date">
 									April 16, 2021								</td>
@@ -1572,7 +1572,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 							</tr>
 														<tr style="border-bottom:1px solid #ccc;">
 								<td class="title">
-									<a href="https://rammb.cira.colostate.edu/training/visit/quick_briefs/glm_minimum_flash_area" target="_blank">GLM Minimum Flash Area</a>
+									<a href="./training/visit/quick_briefs/glm_minimum_flash_area" target="_blank">GLM Minimum Flash Area</a>
 								</td>
 								<td class="date">
 									April 16, 2021								</td>
@@ -1581,7 +1581,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 							</tr>
 														<tr style="border-bottom:1px solid #ccc;">
 								<td class="title">
-									<a href="https://rammb.cira.colostate.edu/training/visit/quick_briefs/glm_fd_gridded_products" target="_blank">GLM Full Disk Gridded Products</a>
+									<a href="./training/visit/quick_briefs/glm_fd_gridded_products" target="_blank">GLM Full Disk Gridded Products</a>
 								</td>
 								<td class="date">
 									April 16, 2021								</td>
