--- a/training/visit/satellite_chat/index.html
+++ b/training/visit/satellite_chat/index.html
@@ -326,7 +326,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 									</thead>
 	    								        							<tr style="border-bottom:1px solid #ccc;">
 										    <td class="title">
-										    	<a href="https://rammb.cira.colostate.edu/training/visit/satellite_chat/20220209/">Post Tropical Depression Ida: Forecasting and messaging a high impact event with the aid of satellite</a>
+										    	<a href="./training/visit/satellite_chat/20220209/">Post Tropical Depression Ida: Forecasting and messaging a high impact event with the aid of satellite</a>
 									    	</td>
 								    		<td>
 										    	2022-02-09										    </td>
@@ -335,7 +335,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 										</tr>
 	    								        							<tr style="border-bottom:1px solid #ccc;">
 										    <td class="title">
-										    	<a href="https://rammb.cira.colostate.edu/training/visit/satellite_chat/20220202/">Utilizing GOES as an Incident Meteorologist</a>
+										    	<a href="./training/visit/satellite_chat/20220202/">Utilizing GOES as an Incident Meteorologist</a>
 									    	</td>
 								    		<td>
 										    	2022-02-02										    </td>
@@ -344,7 +344,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 										</tr>
 	    								        							<tr style="border-bottom:1px solid #ccc;">
 										    <td class="title">
-										    	<a href="https://rammb.cira.colostate.edu/training/visit/satellite_chat/20220119/">Operational Use of NUCAPS in the Tropical Western Pacific</a>
+										    	<a href="./training/visit/satellite_chat/20220119/">Operational Use of NUCAPS in the Tropical Western Pacific</a>
 									    	</td>
 								    		<td>
 										    	2022-01-19										    </td>
@@ -353,7 +353,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 										</tr>
 	    								        							<tr style="border-bottom:1px solid #ccc;">
 										    <td class="title">
-										    	<a href="https://rammb.cira.colostate.edu/training/visit/satellite_chat/20211208/">Utilizing GLM for Marginally Severe Convective Events</a>
+										    	<a href="./training/visit/satellite_chat/20211208/">Utilizing GLM for Marginally Severe Convective Events</a>
 									    	</td>
 								    		<td>
 										    	2021-12-08										    </td>
@@ -362,7 +362,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 										</tr>
 	    								        							<tr style="border-bottom:1px solid #ccc;">
 										    <td class="title">
-										    	<a href="https://rammb.cira.colostate.edu/training/visit/satellite_chat/20211117/">Analysis of Two Lake Enhanced Snow Events Along the Tennessee River</a>
+										    	<a href="./training/visit/satellite_chat/20211117/">Analysis of Two Lake Enhanced Snow Events Along the Tennessee River</a>
 									    	</td>
 								    		<td>
 										    	2021-11-17										    </td>
@@ -371,7 +371,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 										</tr>
 	    								        							<tr style="border-bottom:1px solid #ccc;">
 										    <td class="title">
-										    	<a href="https://rammb.cira.colostate.edu/training/visit/satellite_chat/20210922/">An Operational Review of the Historic Waverly, TN Flash Flooding</a>
+										    	<a href="./training/visit/satellite_chat/20210922/">An Operational Review of the Historic Waverly, TN Flash Flooding</a>
 									    	</td>
 								    		<td>
 										    	2021-09-22										    </td>
@@ -380,7 +380,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 										</tr>
 	    								        							<tr style="border-bottom:1px solid #ccc;">
 										    <td class="title">
-										    	<a href="https://rammb.cira.colostate.edu/training/visit/satellite_chat/20210908/">Forecasting Heavy Rainfall in American Samoa with no Radar</a>
+										    	<a href="./training/visit/satellite_chat/20210908/">Forecasting Heavy Rainfall in American Samoa with no Radar</a>
 									    	</td>
 								    		<td>
 										    	2021-09-08										    </td>
@@ -389,7 +389,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 										</tr>
 	    								        							<tr style="border-bottom:1px solid #ccc;">
 										    <td class="title">
-										    	<a href="https://rammb.cira.colostate.edu/training/visit/satellite_chat/20210825/">A Retrospective Satellite Analysis of the 8 February 2021 Florida Keys Dense Sea Fog Event</a>
+										    	<a href="./training/visit/satellite_chat/20210825/">A Retrospective Satellite Analysis of the 8 February 2021 Florida Keys Dense Sea Fog Event</a>
 									    	</td>
 								    		<td>
 										    	2021-08-25										    </td>
@@ -398,7 +398,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 										</tr>
 	    								        							<tr style="border-bottom:1px solid #ccc;">
 										    <td class="title">
-										    	<a href="https://rammb.cira.colostate.edu/training/visit/satellite_chat/20210721/">Operational use of scatterometry in an otherwise data-sparse tropical western Pacific</a>
+										    	<a href="./training/visit/satellite_chat/20210721/">Operational use of scatterometry in an otherwise data-sparse tropical western Pacific</a>
 									    	</td>
 								    		<td>
 										    	2021-08-02										    </td>
@@ -407,7 +407,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 										</tr>
 	    								        							<tr style="border-bottom:1px solid #ccc;">
 										    <td class="title">
-										    	<a href="https://rammb.cira.colostate.edu/training/visit/satellite_chat/20210616">Utilizing NUCAPS for Supplemental Observations in a Convective Environment</a>
+										    	<a href="./training/visit/satellite_chat/20210616">Utilizing NUCAPS for Supplemental Observations in a Convective Environment</a>
 									    	</td>
 								    		<td>
 										    	2021-06-16										    </td>
@@ -416,7 +416,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 										</tr>
 	    								        							<tr style="border-bottom:1px solid #ccc;">
 										    <td class="title">
-										    	<a href="https://rammb.cira.colostate.edu/training/visit/satellite_chat/20210526">A Satellite &#038; Radar-Based Analysis of the 26 March 2021 Middlebury, Vermont EF-1 Tornado Environment</a>
+										    	<a href="./training/visit/satellite_chat/20210526">A Satellite &#038; Radar-Based Analysis of the 26 March 2021 Middlebury, Vermont EF-1 Tornado Environment</a>
 									    	</td>
 								    		<td>
 										    	2021-05-27										    </td>
@@ -425,7 +425,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 										</tr>
 	    								        							<tr style="border-bottom:1px solid #ccc;">
 										    <td class="title">
-										    	<a href="https://rammb.cira.colostate.edu/training/visit/satellite_chat/20210505/">NWS Central Region Remote Mesoanalyst Proof of Concept: The 17 March 2021 Tornado Event in Southwest Missouri</a>
+										    	<a href="./training/visit/satellite_chat/20210505/">NWS Central Region Remote Mesoanalyst Proof of Concept: The 17 March 2021 Tornado Event in Southwest Missouri</a>
 									    	</td>
 								    		<td>
 										    	2021-05-05										    </td>
@@ -434,7 +434,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 										</tr>
 	    								        							<tr style="border-bottom:1px solid #ccc;">
 										    <td class="title">
-										    	<a href="https://rammb.cira.colostate.edu/training/visit/satellite_chat/20210407/">Use of NUCAPS Soundings in Mesoanalysis on a Conditional Severe Risk Day</a>
+										    	<a href="./training/visit/satellite_chat/20210407/">Use of NUCAPS Soundings in Mesoanalysis on a Conditional Severe Risk Day</a>
 									    	</td>
 								    		<td>
 										    	2021-04-07										    </td>
@@ -443,7 +443,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 										</tr>
 	    								        							<tr style="border-bottom:1px solid #ccc;">
 										    <td class="title">
-										    	<a href="https://rammb.cira.colostate.edu/training/visit/satellite_chat/20210324/">The Use of Lightning and the NOAA/CIMSS ProbSevere Model in Tornado Detection Over the Mid-Atlantic</a>
+										    	<a href="./training/visit/satellite_chat/20210324/">The Use of Lightning and the NOAA/CIMSS ProbSevere Model in Tornado Detection Over the Mid-Atlantic</a>
 									    	</td>
 								    		<td>
 										    	2021-03-24										    </td>
@@ -452,7 +452,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 										</tr>
 	    								        							<tr style="border-bottom:1px solid #ccc;">
 										    <td class="title">
-										    	<a href="https://rammb.cira.colostate.edu/training/visit/satellite_chat/20210317/">MIMIC-TPW for Winter Applications</a>
+										    	<a href="./training/visit/satellite_chat/20210317/">MIMIC-TPW for Winter Applications</a>
 									    	</td>
 								    		<td>
 										    	2021-03-17										    </td>
